Income, CSS, Maintenance

--- a/index.html
+++ b/index.html
@@ -10,21 +10,25 @@
     <h1>AIRLINE MANAGER</h1>
     <div class="button">
     <button onclick="buyPrompt()">Buy</button> 
+    <button onclick="maintain()">Maintain</button>
 </div>
-<div class="dropdown">
-    <button class="dropbtn">Actions</button>
-    <div class="dropdown-content">
-      <a href="#">Link 1</a>
-      <a href="#">Link 2</a>
-      <a href="#">Link 3</a>
-    </div>
-  </div>
+<div class="inventory">
     <p id="money"></p>
     <p><b>Aircraft Inventory</b></p>
     <p id="q400"></p>
     <p id="a320"></p>
     <p id="a350"></p>
     <p id="747"></p>
+</div>
+
+<div class="maintenance">
+    <p><b>Maintenance Cost: </b> <p id="maintainCost"></p></p>
+</div>
+
+<div class="codeList">
+    
+</div>
+
 </body>
 </html>
 <script src="index.js"></script>
