--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
     <button id="first" onclick="first()">Buy First Class <p class="cost">$80,000,000</p></button>
     <button id="airport" onclick="airport()">Unlock New Airport <p class="cost" id="airportcost"></p></button>
 </div>
+<div class="button upgrades">
+    <button id="booking" onclick="booking()">Buy Better Booking System<p class="cost">$50,000,000</p></button>
+    <button id="alliance" onclick="alliance()">Join Alliance<p class="cost">$250,000,000</p></button>
+</div>
 <div class="inventory">
     <b class="money"><p id="money"></p></b>
     <p><b>Aircraft Inventory</b></p>
