Limited events + Fixes

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <button id="airport" onclick="airport()">Unlock New Airport <p class="cost" id="airportcost"></p></button>
 </div>
 <div class="button upgrades">
-    <button id="booking" onclick="booking()">Buy Better Booking System<p class="cost">$50,000,000</p></button>
+    <button id="booking" onclick="bookingSys()">Buy Better Booking System<p class="cost">$50,000,000</p></button>
     <button id="alliance" onclick="alliance()">Join Alliance<p class="cost">$250,000,000</p></button>
 </div>
 <div class="inventory">
