--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 </div>
 <div class="multipliers">
     <b>Upgrade Multiplier: </b> <p id="mult"></p>
+    <b>Time Multiplier: </b> <p id="time"></p>
 </div>
 
 <div class="codelist">
